--- a/blog.html
+++ b/blog.html
@@ -108,10 +108,22 @@
         <h6 class="display-6 text-center">最近文章</h6> <br>
         <ul class="nav nav-tabs">
             <ul class="nav nav-tabs">
-                <li class="nav-item"><a class="nav-link active" href="https://nqhyee.vsc.icu/blog.html">大杂烩</a></li>
+                <li class="nav-item"><a class="nav-link active" href="https://nqhyee.vsc.icu/blog.html">全部</a></li>            
+                <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/blog分类/bblog.html">大杂烩</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/log.html">本站日志</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/blog分类/homo.html">homo</a></li>                
             </ul>
         </ul>
+        <div class="card">
+            <h5 class="card-header text-center">臭手表（大悲）</h5>
+            <div class="card-body">
+                使用沼气电池的手表，699大洋
+            </div> <a href="https://nqhyee.vsc.icu/homo/臭手表" class="btn btn-primary">阅读</a>
+            <div class="card-footer text-center">
+                2023-9-4
+            </div>
+        </div> 
+        <br>        
         <div class="card">
             <h5 class="card-header text-center">能启猪上东兴</h5>
             <div class="card-body">
@@ -156,7 +168,35 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-week" viewbox="0 0 16 16"><path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-5 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z" /> <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
                 </svg>
             </div>
-        </div> <!--按钮--> 
+        </div>
+        <div class="card">
+            <h5 class="card-header text-center">猪圈V2版本升级列表</h5>
+            <div class="card-body">
+                更改内容一大堆
+            </div> <a href="https://nqhyee.vsc.icu/日志/猪圈V2更改" class="btn btn-primary">阅读</a>
+            <div class="card-footer text-center">
+                2023-6-29
+            </div>
+        </div> <br>
+        <div class="card">
+            <h5 class="card-header text-center">更换前端库</h5>
+            <div class="card-body">
+                cdn.jsdelivr.net炸了，被墙了
+            </div> <a href="https://nqhyee.vsc.icu/日志/更换前端库" class="btn btn-primary">阅读</a>
+            <div class="card-footer text-center">
+                2023-6-22
+            </div>
+        </div>
+         <br>
+        <div class="card">
+            <h5 class="card-header text-center">更换证书</h5>
+            <div class="card-body">
+                更换SSL证书，抛弃cersign
+            </div> <a href="https://nqhyee.vsc.icu/日志/更换证书" class="btn btn-primary">阅读</a>
+            <div class="card-footer text-center">2023-6-19</div>
+        </div>
+        <br>
+         <!--按钮--> 
         <a href="#" class="btn btn-outline-success">回到顶部 
            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-up" viewbox="0 0 16 16">
               <path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z" />
