--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <br>
         <!--卡片-->
       <div class="shadow p-4 mb-4">
-        <h4 class="text-center display-4">王六童的慢手
+        <h4 class="text-center display-4">臭手表
           <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-card-text" viewBox="0 0 16 16">
              <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z"/>
              <path d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8zm0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z"/>
@@ -179,11 +179,20 @@
         </h4>
         <br>
         <div class="card">
-            <div class="card-body">王六童的屑慢手，乱七八糟</div> 
-            <a href="https://nqhyee.vsc.icu/王六童" class="btn btn-primary">阅读</a>
-            <div class="card-footer text-center">2023-6-25</div>
+            <h5 class="card-header text-center">臭手表（大悲）</h5>
+            <div class="card-body">
+                使用沼气电池的手表，699大洋
+          <p align="center">
+            <video width="400px" controls>
+                <source src="https://nqhyee.vsc.icu/homo/臭手表/HomoWatch.mp4" type="video/mp4"> Your browser does not support the video tag.
+            </video>
+          </p>
+            </div> <a href="https://nqhyee.vsc.icu/homo/臭手表" class="btn btn-primary">阅读</a>
+            <div class="card-footer text-center">
+                2023-9-4
+            </div>
         </div> 
-      </div>
+        <br>
         <br>
         <br>
       <div class="shadow p-4 mb-4">
