--- a/yjsnpi.html
+++ b/yjsnpi.html
@@ -84,6 +84,7 @@
         </script>  
     </head>
     <body>
-      <a type="button" class="bth btn-primary" href="http://pancdndx1.muhan.ltd:54689/api/v3/slave/source/0/dXBsb2Fkcy8yMDIzLzA5LzIzLzMxNTU0NDE5NTMubXAz/3155441953.mp3?sign=7xcjb6HcJdUzzXexPGJhw4h8CZ7BJEREcdF_rj2H9uQ%3D%3A0">哼哼哼啊啊啊啊，听冬之花的能启猪是屑</a>
+      <div class="d-grid gap-2">       
+        <a class="btn btn-primary" href="http://pancdndx1.muhan.ltd:54689/api/v3/slave/source/0/dXBsb2Fkcy8yMDIzLzA5LzIzLzMxNTU0NDE5NTMubXAz/3155441953.mp3?sign=7xcjb6HcJdUzzXexPGJhw4h8CZ7BJEREcdF_rj2H9uQ%3D%3A0" role="button">压力马斯内</a>
     </body>
 </html>    
