--- a/下载.html
+++ b/下载.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="zh-CN">
     <head>
         <title>下载:猪圈-能启猪运营</title>
@@ -101,13 +101,19 @@
                 </div>
             </div>
         </nav>
-        <h1 class="text-center">下载源码</h1>
+        <h1 class="text-center">下载</h1>
         <div class="container p-5 my-5 bg-primary text-white">
             <h2 class="text-center">必读</h2>
             <p>源码可以作为模板使用，文章可以转载（CC-BY）</p>
         </div> 
-        <img src="https://cdnjson.com/images/2023/07/19/4a2703a70724bd7f6b0613838eac6ddd_1440w.th.png" alt="CC BY">
+        <img src="https://cdnjson.com/images/2023/07/19/4a2703a70724bd7f6b0613838eac6ddd_1440w.th.png" alt="CC BY">        
         <div class="text-center">
+        <a href="猪圈.apk" class="btn btn-primary">下载最新安卓app 
+            <svg xmlns="http://www.w3.org/2000/svg" width="89" height="97" fill="currentColor" class="bi bi-download" viewbox="0 0 16 16">                                                           
+              <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" /> 
+              <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z" />
+            </svg> 
+          </a>
           <a href="源码.tar.gz" class="btn btn-primary">下载最新源码压缩包 
             <svg xmlns="http://www.w3.org/2000/svg" width="89" height="97" fill="currentColor" class="bi bi-download" viewbox="0 0 16 16">                                                           
               <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" /> 
