--- a/ipfs-404.html
+++ b/ipfs-404.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="zh-CN">
     <head>
-        <title>404 not found:猪圈-使用LIGHTTPD能启猪运营</title>
+        <title>404 not found:猪圈-能启猪运营</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.staticfile.org/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
@@ -82,7 +82,7 @@
               })
           })
          })()  
-        </script>  
+        </script>        
     </head>
     <body><!--导航栏-->
         <nav class="navbar navbar-expand-lg navbar-light">
