--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
          })(window, document, "clarity", "script", "hh7z8az9h5");
         </script>
-        <meta name="description" content="欢迎来到能启猪的个人网站！我是一名XXS，对于各种创意和技术充满了热情。这个网站是我展示自己创造力和分享各种有趣的内容的地方。除了个人作品，此外，我还会在我的博客中分享一些我个人生活的点滴和经历。我相信生活的每一个瞬间都是值得记录和分享的，我希望通过我的博客能够与大家建立更加深入的连接。感谢你来到我的网站，希望你能够在这里找到你感兴趣的内容，并且享受浏览我的作品所带来的乐趣。如果你有任何问题或者想法，欢迎与我联系。邮箱：pig810@outlook.com让我们一起创造并分享美好的事物！">
+        <meta name="description" content="欢迎来到能启猪的个人网站！我是sb，对于各种创意和技术充满了热情。这个网站是我展示自己创造力和分享各种有趣的内容的地方。除了个人作品，此外，我还会在我的博客中分享一些我个人生活的点滴和经历。我相信生活的每一个瞬间都是值得记录和分享的，我希望通过我的博客能够与大家建立更加深入的连接。感谢你来到我的网站，希望你能够在这里找到你感兴趣的内容，并且享受浏览我的作品所带来的乐趣。如果你有任何问题或者想法，欢迎与我联系。邮箱：pig810@outlook.com让我们一起创造并分享美好的事物！">
     </head>
     <body>
     <!--导航栏-->
@@ -115,13 +115,13 @@
            <a href="#" class="btn btn-primary bth-sm">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-up" viewbox="0 0 16 16"><path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z" /></svg> 
            </a> 
-        </div>       
-        <div class="container-fluid bg-danger text-center rounded">
-          <h4 class="text-center">请收藏我们的网址</h4>
+        </div>
+        <div class="container-fluid bg-primary text-center rounded">
+          <h4 class="text-center text-white">请收藏我们的网址</h4>
           <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
              <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
           </svg>
-          <p class="text-center">nqhyee.vsc.icu</p>
+          <p class="text-center text-white">nqhyee.vsc.icu</p>
         </div>  
         <!-- 栏目 -->
         <ul class="nav nav-tabs" role="tablist">
@@ -137,7 +137,7 @@
                 <h3>小猪漫画</h3>
                 <h6>由小猪编写</h6>
                 <p>停止更新</p> 
-                <a href="/小猪漫画" class="btn btn-danger">阅读 
+                <a href="/小猪漫画" class="btn btn-primary">阅读 
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewbox="0 0 16 16"><path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" /> <path d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2z" /> <path d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z" /></svg> 
                 </a>
             </div>
@@ -147,7 +147,7 @@
                 <h3>财猪漫画</h3>
                 <h6>由财猪编写</h6>
                 <p>正在更新</p> 
-                <a href="/财猪漫画" class="btn btn-danger">阅读 
+                <a href="/财猪漫画" class="btn btn-primary">阅读 
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewbox="0 0 16 16"><path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" /> <path d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2z" /> <path d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z" /></svg> 
                 </a>
             </div>
@@ -157,7 +157,7 @@
                 <h3>大猪小说</h3>
                 <h6>由财猪编写</h6>
                 <p>正在更新</p> 
-                <a href="/大猪小说" class="btn btn-danger">阅读 
+                <a href="/大猪小说" class="btn btn-primary">阅读 
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewbox="0 0 16 16"><path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" /> <path d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2z" /> <path d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z" /></svg> 
                 </a>
             </div>
@@ -165,7 +165,7 @@
             <div id="menu2" class="container tab-pane fade">
                 <br>
                 <h3>语录</h3>
-                <h1>出去！</h1> <a href="https://nqhyee.vsc.icu/核导弹" class="btn btn-danger">何导弹</a> <a href="https://nqhyee.vsc.icu/烧饼" class="btn btn-danger">郑烧饼</a> <a href="#" class="btn btn-danger">膏药</a>
+                <h1>出去！</h1> <a href="https://nqhyee.vsc.icu/核导弹" class="btn btn-primary">何导弹</a> <a href="https://nqhyee.vsc.icu/烧饼" class="btn btn-primary">郑烧饼</a> <a href="#" class="btn btn-primary">膏药</a>
                 <div id="menu1" class="container tab-pane fade">
                 </div>
             </div>
@@ -185,13 +185,12 @@
             <h5 class="card-header text-center">臭手表（大悲）</h5>
             <div class="card-body">
                 使用沼气电池的手表，699大洋
-          <p align="center">
-             <video width="400px" controls>
-                <source src="/homo/臭手表/HomoWatch.mp4" type="video/mp4"> Your browser does not support the video tag.
-            </video>
+          <p align="center">         
+           <!-- 指定播放器容器 -->
+           <div id="mui-player"></div>
           </p>
             </div>
-            <a href="https://nqhyee.vsc.icu/homo/臭手表" class="btn btn-danger">阅读</a>        
+            <a href="https://nqhyee.vsc.icu/homo/臭手表" class="btn btn-primary">阅读</a>        
             <div class="card-footer text-center">
                 2023-9-4
             </div>
@@ -213,7 +212,7 @@
                 </div>
             </div> 
             <div class="d-grid">
-              <a href="https://nqhyee.vsc.icu/文章/上东兴的能启猪" class="btn btn-danger">阅读</a>
+              <a href="https://nqhyee.vsc.icu/文章/上东兴的能启猪" class="btn btn-primary">阅读</a>
             </div>
             <div class="card-footer text-center">
                 2023-7-8 
@@ -225,7 +224,7 @@
         <div class="card">
             <h5 class="card-header text-center">盲憨把自己压缩了</h5>
             <div class="card-body">QQ浏览器，我做错了什么？
-            </div> <a href="https://nqhyee.vsc.icu/文章/盲憨把自己压缩了" class="btn btn-danger">阅读 </a>
+            </div> <a href="https://nqhyee.vsc.icu/文章/盲憨把自己压缩了" class="btn btn-primary">阅读 </a>
             <div class="card-footer text-center">2023-6-18</div>
         </div> 
         <br>
@@ -242,14 +241,14 @@
         <div class="card">
             <h5 class="card-header text-center">猪圈V2版本升级列表</h5>
             <div class="card-body">更改内容一大堆</div> 
-            <a href="https://nqhyee.vsc.icu/日志/猪圈V2更改" class="btn btn-danger">阅读</a>
+            <a href="https://nqhyee.vsc.icu/日志/猪圈V2更改" class="btn btn-primary">阅读</a>
             <div class="card-footer text-center">2023-6-29</div>
         </div>
         <br>
         <div class="card">
             <h5 class="card-header text-center">更换前端库</h5>
             <div class="card-body">cdn.jsdelivr.net炸了，被墙了</div> 
-            <a href="https://nqhyee.vsc.icu/日志/更换前端库" class="btn btn-danger">阅读 </a>
+            <a href="https://nqhyee.vsc.icu/日志/更换前端库" class="btn btn-primary">阅读 </a>
             <div class="card-footer text-center">2023-6-22</div>
         </div> 
         <br> 
@@ -275,7 +274,7 @@
               <a href="https://nqhyee.vsc.icu/sitemap.xml" class="btn btn-warning">网站地图查看 
                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-diagram-2" viewbox="0 0 16 16"><path fill-rule="evenodd" d="M6 3.5A1.5 1.5 0 0 1 7.5 2h1A1.5 1.5 0 0 1 10 3.5v1A1.5 1.5 0 0 1 8.5 6v1H11a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-1 0V8h-5v.5a.5.5 0 0 1-1 0v-1A.5.5 0 0 1 5 7h2.5V6A1.5 1.5 0 0 1 6 4.5v-1zM8.5 5a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1zM3 11.5A1.5 1.5 0 0 1 4.5 10h1A1.5 1.5 0 0 1 7 11.5v1A1.5 1.5 0 0 1 5.5 14h-1A1.5 1.5 0 0 1 3 12.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zm4.5.5a1.5 1.5 0 0 1 1.5-1.5h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1A1.5 1.5 0 0 1 9 12.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1z" /></svg> 
               </a> 
-              <a href="https://www.lkdns.top" class="btn btn-danger">域名由灵空提供 
+              <a href="https://www.lkdns.top" class="btn btn-primary">域名由灵空提供 
                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-globe" viewbox="0 0 16 16"><path d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm7.5-6.923c-.67.204-1.335.82-1.887 1.855A7.97 7.97 0 0 0 5.145 4H7.5V1.077zM4.09 4a9.267 9.267 0 0 1 .64-1.539 6.7 6.7 0 0 1 .597-.933A7.025 7.025 0 0 0 2.255 4H4.09zm-.582 3.5c.03-.877.138-1.718.312-2.5H1.674a6.958 6.958 0 0 0-.656 2.5h2.49zM4.847 5a12.5 12.5 0 0 0-.338 2.5H7.5V5H4.847zM8.5 5v2.5h2.99a12.495 12.495 0 0 0-.337-2.5H8.5zM4.51 8.5a12.5 12.5 0 0 0 .337 2.5H7.5V8.5H4.51zm3.99 0V11h2.653c.187-.765.306-1.608.338-2.5H8.5zM5.145 12c.138.386.295.744.468 1.068.552 1.035 1.218 1.65 1.887 1.855V12H5.145zm.182 2.472a6.696 6.696 0 0 1-.597-.933A9.268 9.268 0 0 1 4.09 12H2.255a7.024 7.024 0 0 0 3.072 2.472zM3.82 11a13.652 13.652 0 0 1-.312-2.5h-2.49c.062.89.291 1.733.656 2.5H3.82zm6.853 3.472A7.024 7.024 0 0 0 13.745 12H11.91a9.27 9.27 0 0 1-.64 1.539 6.688 6.688 0 0 1-.597.933zM8.5 12v2.923c.67-.204 1.335-.82 1.887-1.855.173-.324.33-.682.468-1.068H8.5zm3.68-1h2.146c.365-.767.594-1.61.656-2.5h-2.49a13.65 13.65 0 0 1-.312 2.5zm2.802-3.5a6.959 6.959 0 0 0-.656-2.5H12.18c.174.782.282 1.623.312 2.5h2.49zM11.27 2.461c.247.464.462.98.64 1.539h1.835a7.024 7.024 0 0 0-3.072-2.472c.218.284.418.598.597.933zM10.855 4a7.966 7.966 0 0 0-.468-1.068C9.835 1.897 9.17 1.282 8.5 1.077V4h2.355z" /></svg> 
               </a>
           </div>
