--- a/blog.html
+++ b/blog.html
@@ -106,14 +106,17 @@
           <iframe src="https://cn.widgetstore.net/view/index.html?q=e420754464a3777c0001c4ee2c8af489.4abf351264d0767e005c17d90ac7038e"></iframe>
         </div>
         <h6 class="display-6 text-center">最近文章</h6> <br>
-        <ul class="nav nav-tabs">
-            <ul class="nav nav-tabs">
-                <li class="nav-item"><a class="nav-link active" href="https://nqhyee.vsc.icu/blog.html">全部</a></li>            
-                <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/blog分类/bblog.html">大杂烩</a></li>
-                <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/log.html">本站日志</a></li>
-                <li class="nav-item"><a class="nav-link" href="https://nqhyee.vsc.icu/blog分类/homo.html">homo</a></li>                
-            </ul>
-        </ul>
+        <!-- 栏目 -->
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="nav-item"><a class="nav-link active" data-bs-toggle="tab" href="#home">全部</a></li>
+            <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu3">大杂烩</a></li>
+            <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu1">日志</a></li>
+            <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#menu2">hono</a></li>
+        </ul>         
+        <!--全部-->
+        <div class="tab-content">
+            <div id="home" class="container tab-pane active">
+                <br>
         <div class="card">
             <h5 class="card-header text-center">臭手表（大悲）</h5>
             <div class="card-body">
@@ -195,35 +198,107 @@
             </div> <a href="https://nqhyee.vsc.icu/日志/更换证书" class="btn btn-primary">阅读</a>
             <div class="card-footer text-center">2023-6-19</div>
         </div>
+        <br>               
+            </div>
+            <!--大杂烩-->
+            <div id="menu1" class="container tab-pane fade">
+                <br>
+        <div class="card">
+            <h5 class="card-header text-center">能启猪上东兴</h5>
+            <div class="card-body">
+                <div class="text-center">盲憨和王六童都上了27                                   
+                </div>
+            </div> 
+            <div class="d-grid">
+              <a href="https://nqhyee.vsc.icu/文章/上东兴的能启猪" class="btn btn-primary">阅读</a>
+            </div>
+            <div class="card-footer text-center">
+                2023-7-8 
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-week" viewbox="0 0 16 16"><path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-5 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z" /> <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
+                </svg>
+            </div>
+        </div>
         <br>
-         <!--按钮--> 
-        <a href="#" class="btn btn-outline-success">回到顶部 
-           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-up" viewbox="0 0 16 16">
-              <path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z" />
-           </svg> 
-        </a>
-        <br> 
-            <br>
-             <!--页脚--> 
-        <div class="mt-5 p-4 bg-dark text-white text-center"><span id="runtime_span"></span>
-            <script type="text/javascript">function show_runtime(){window.setTimeout("show_runtime()",1000);X=new 
-                 Date("6/5/2023 0:00:00");
-                 Y=new Date();T=(Y.getTime()-X.getTime());M=24*60*60*1000;
-                 a=T/M;A=Math.floor(a);b=(a-A)*24;B=Math.floor(b);c=(b-B)*60;C=Math.floor((b-B)*60);D=Math.floor((c-C)*60);
-                 runtime_span.innerHTML="本站勉强运行: "+A+"天"+B+"小时"+C+"分"+D+"秒"}show_runtime();
-            </script> 
-            <img src="/logo-m.svg" alt="icon.png" border="0">
-            <h4>由4EVERLAND托管</h4>
-            <p>能启猪负责运营</p>
-          <div class="btn-group">
-              <a href="https://nqhyee.vsc.icu/sitemap.xml" class="btn btn-warning">网站地图查看 
-                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-diagram-2" viewbox="0 0 16 16"><path fill-rule="evenodd" d="M6 3.5A1.5 1.5 0 0 1 7.5 2h1A1.5 1.5 0 0 1 10 3.5v1A1.5 1.5 0 0 1 8.5 6v1H11a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-1 0V8h-5v.5a.5.5 0 0 1-1 0v-1A.5.5 0 0 1 5 7h2.5V6A1.5 1.5 0 0 1 6 4.5v-1zM8.5 5a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1zM3 11.5A1.5 1.5 0 0 1 4.5 10h1A1.5 1.5 0 0 1 7 11.5v1A1.5 1.5 0 0 1 5.5 14h-1A1.5 1.5 0 0 1 3 12.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1zm4.5.5a1.5 1.5 0 0 1 1.5-1.5h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1A1.5 1.5 0 0 1 9 12.5v-1zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1z" /></svg> 
-              </a> 
-              <a href="https://www.lkdns.top" class="btn btn-primary">域名由灵空提供 
-                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-globe" viewbox="0 0 16 16"><path d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm7.5-6.923c-.67.204-1.335.82-1.887 1.855A7.97 7.97 0 0 0 5.145 4H7.5V1.077zM4.09 4a9.267 9.267 0 0 1 .64-1.539 6.7 6.7 0 0 1 .597-.933A7.025 7.025 0 0 0 2.255 4H4.09zm-.582 3.5c.03-.877.138-1.718.312-2.5H1.674a6.958 6.958 0 0 0-.656 2.5h2.49zM4.847 5a12.5 12.5 0 0 0-.338 2.5H7.5V5H4.847zM8.5 5v2.5h2.99a12.495 12.495 0 0 0-.337-2.5H8.5zM4.51 8.5a12.5 12.5 0 0 0 .337 2.5H7.5V8.5H4.51zm3.99 0V11h2.653c.187-.765.306-1.608.338-2.5H8.5zM5.145 12c.138.386.295.744.468 1.068.552 1.035 1.218 1.65 1.887 1.855V12H5.145zm.182 2.472a6.696 6.696 0 0 1-.597-.933A9.268 9.268 0 0 1 4.09 12H2.255a7.024 7.024 0 0 0 3.072 2.472zM3.82 11a13.652 13.652 0 0 1-.312-2.5h-2.49c.062.89.291 1.733.656 2.5H3.82zm6.853 3.472A7.024 7.024 0 0 0 13.745 12H11.91a9.27 9.27 0 0 1-.64 1.539 6.688 6.688 0 0 1-.597.933zM8.5 12v2.923c.67-.204 1.335-.82 1.887-1.855.173-.324.33-.682.468-1.068H8.5zm3.68-1h2.146c.365-.767.594-1.61.656-2.5h-2.49a13.65 13.65 0 0 1-.312 2.5zm2.802-3.5a6.959 6.959 0 0 0-.656-2.5H12.18c.174.782.282 1.623.312 2.5h2.49zM11.27 2.461c.247.464.462.98.64 1.539h1.835a7.024 7.024 0 0 0-3.072-2.472c.218.284.418.598.597.933zM10.855 4a7.966 7.966 0 0 0-.468-1.068C9.835 1.897 9.17 1.282 8.5 1.077V4h2.355z" /></svg> 
-              </a>
-          </div>
+        <div class="card">
+            <h5 class="card-header text-center">我emo了</h5>
+            <div class="card-body">
+                <div class="text-center"><a href="https://imgtg.com/image/Ozfmqq"><img src="https://i.imgtg.com/2023/07/16/Ozfmqq.th.webp" alt="Ozfmqq.th.webp" border="0"></a>
+                </div> mm给我报了一堆辅导班，以后可能没有时间维护了…
+            </div> 
+            <div class="d-grid">
+              <a href="https://nqhyee.vsc.icu/文章/我emo了" class="btn btn-primary">阅读</a>
+            </div>
+            <div class="card-footer text-center">
+                2023-7-8 
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-week" viewbox="0 0 16 16"><path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-5 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z" /> <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
+                </svg>
+            </div>
+        </div> <br>
+        <div class="card">
+            <h5 class="card-header text-center">盲憨把自己压缩了</h5>
+            <div class="card-body">
+                QQ浏览器，我做错了什么？
+            <div class="d-grid">     
+              <a href="https://nqhyee.vsc.icu/文章/盲憨把自己压缩了" class="btn btn-primary">阅读</a>
+            </div>
+            </div>
+            <div class="card-footer text-center">
+                2023-6-18 
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-week" viewbox="0 0 16 16"><path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-5 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z" /> <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
+                </svg>
+            </div>
+        </div>                        
+            </div>
+            <!--日志-->
+            <div id="menu3" class="container tab-pane fade">
+                <br>
+        <div class="card">
+            <h5 class="card-header text-center">猪圈V2版本升级列表</h5>
+            <div class="card-body">
+                更改内容一大堆
+            </div> <a href="https://nqhyee.vsc.icu/日志/猪圈V2更改" class="btn btn-primary">阅读</a>
+            <div class="card-footer text-center">
+                2023-6-29
+            </div>
+        </div> <br>
+        <div class="card">
+            <h5 class="card-header text-center">更换前端库</h5>
+            <div class="card-body">
+                cdn.jsdelivr.net炸了，被墙了
+            </div> <a href="https://nqhyee.vsc.icu/日志/更换前端库" class="btn btn-primary">阅读</a>
+            <div class="card-footer text-center">
+                2023-6-22
+            </div>
+        </div>
+         <br>
+        <div class="card">
+            <h5 class="card-header text-center">更换证书</h5>
+            <div class="card-body">
+                更换SSL证书，抛弃cersign
+            </div> <a href="https://nqhyee.vsc.icu/日志/更换证书" class="btn btn-primary">阅读</a>
+            <div class="card-footer text-center">2023-6-19</div>
+        </div>
+        <br>              
+            </div>
+            <!--homo-->
+            <div id="menu2" class="container tab-pane fade">
+                <br>
+        <div class="card">
+            <h5 class="card-header text-center">臭手表（大悲）</h5>
+            <div class="card-body">
+                使用沼气电池的手表，699大洋
+          <p align="center">
+            <video width="400px" controls>
+                <source src="/homo/臭手表/HomoWatch.mp4"type="video/mp4"> Your browser does not support the video tag.
+            </video>
+          </p>                
+            </div> <a href="https://nqhyee.vsc.icu/homo/臭手表" class="btn btn-primary">阅读</a>
+            <div class="card-footer text-center">
+                2023-9-4
+            </div>
         </div> 
-      </div>      
-    </body>
-</html>   
+        <br>                
+            </div>
+        </div> 
+        <br>
+        <br>
