--- a/blog.html
+++ b/blog.html
@@ -8,83 +8,9 @@
         <link href="https://cdn.staticfile.org/video.js/8.6.1/alt/video-js-cdn.min.css" rel="stylesheet">
         <script src="https://cdn.staticfile.org/video.js/8.6.1/alt/video.core.min.js"></script>
         <link href="https://cdn.bootcdn.net/ajax/libs/bootstrap-icons/1.9.1/font/bootstrap-icons.css" rel="stylesheet">
-        <meta name="description" content="小猪的博客-邮箱：pig810@outlook.com">
-        <script>
-               (() => {
-          'use strict'
-
-          const getStoredTheme = () => localStorage.getItem('theme')
-          const setStoredTheme = theme => localStorage.setItem('theme', theme)
-
-          const getPreferredTheme = () => {
-            const storedTheme = getStoredTheme()
-            if (storedTheme) {
-              return storedTheme
-            }
-
-            return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light'
-          }
-
-          const setTheme = theme => {
-            if (theme === 'auto' && window.matchMedia('(prefers-color-scheme: dark)').matches) {
-              document.documentElement.setAttribute('data-bs-theme', 'dark')
-            } else {
-              document.documentElement.setAttribute('data-bs-theme', theme)
-            }
-          }
-
-          setTheme(getPreferredTheme())
-
-          const showActiveTheme = (theme, focus = false) => {
-            const themeSwitcher = document.querySelector('#bd-theme')
-
-            if (!themeSwitcher) {
-              return
-            }
-
-            const themeSwitcherText = document.querySelector('#bd-theme-text')
-            const activeThemeIcon = document.querySelector('.theme-icon-active use')
-            const btnToActive = document.querySelector(`[data-bs-theme-value="${theme}"]`)
-            const svgOfActiveBtn = btnToActive.querySelector('svg use').getAttribute('href')
-
-            document.querySelectorAll('[data-bs-theme-value]').forEach(element => {
-              element.classList.remove('active')
-              element.setAttribute('aria-pressed', 'false')
-            })
-
-            btnToActive.classList.add('active')
-            btnToActive.setAttribute('aria-pressed', 'true')
-            activeThemeIcon.setAttribute('href', svgOfActiveBtn)
-            const themeSwitcherLabel = `${themeSwitcherText.textContent} (${btnToActive.dataset.bsThemeValue})`
-            themeSwitcher.setAttribute('aria-label', themeSwitcherLabel)
-
-            if (focus) {
-              themeSwitcher.focus()
-            }
-          }
-
-          window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', () => {
-            const storedTheme = getStoredTheme()
-            if (storedTheme !== 'light' && storedTheme !== 'dark') {
-              setTheme(getPreferredTheme())
-            }
-          })
-
-          window.addEventListener('DOMContentLoaded', () => {
-            showActiveTheme(getPreferredTheme())
-
-            document.querySelectorAll('[data-bs-theme-value]')
-              .forEach(toggle => {
-                toggle.addEventListener('click', () => {
-                  const theme = toggle.getAttribute('data-bs-theme-value')
-                  setStoredTheme(theme)
-                  setTheme(theme)
-                showActiveTheme(theme, true)
-                })
-              })
-          })
-          })() 
-        </script>        
+        <link href="https://cdn.bootcdn.net/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
+        <meta name="description" content="小猪的博客-邮箱：pig810@outlook.com">        
+        <script src="/dark.js"></script>  
         <script src="https://nqhyee.vsc.icu/view-image.min (1).js"></script>
         <script>
            window.ViewImage && ViewImage.init('.img-fluid');
@@ -96,7 +22,7 @@
             background-color:#87CEFA;
             padding: 15px;
           }
-        </style>          
+        </style>     
     </head>
     <body><!--导航栏-->
         <nav class="navbar navbar-expand-lg navbar-light sticky-top">
@@ -114,7 +40,7 @@
                 </div>
             </div>
         </nav>
-        <h1 class="text-center">小猪的blog</h1> <br>        
+        <h1 class="text-center animate__animated animate__fadeInBottomLeft">小猪的blog</h1> <br>        
         <h6 class="display-6 text-center">最近文章</h6> <br>
         <div class="text-center p text-dark">
           <script>
@@ -138,7 +64,7 @@
                 </svg> </a>
         </div>       
         <!--全部-->        
-        <div class="tab-content">
+        <div class="tab-content animate__animated animate__fadeInLeftBig">
             <div id="home" class="container tab-pane active">
               <div class="row"> 
                 <div class="card col-md">
